--- a/web/themes/custom/pba/css/styles.css
+++ b/web/themes/custom/pba/css/styles.css
@@ -8,6 +8,9 @@ body {
 a {
   text-decoration: none; }
 
+[v-cloak] {
+  display: none; }
+
 @font-face {
   font-family: "bellotaregular";
   src: url("../fonts/Bellota-Regular-webfont.woff") format("woff");
@@ -35,7 +38,7 @@ img {
     position: fixed;
     top: 35px;
     left: 30px;
-    z-index: 99999999;
+    z-index: 150;
     font-size: 24px;
     color: #8b9db6;
     transition: 0.4s color;
@@ -47,12 +50,19 @@ img {
     @media screen and (max-width: 749px) {
       #page #header-toggle-label {
         display: block; } }
+    @media screen and (max-width: 599px) {
+      #page #header-toggle-label {
+        position: absolute; } }
     @media screen and (min-width: 600px) and (max-width: 749px) {
       #page #header-toggle-label {
         left: 20px;
         top: 35px; } }
   #page #header-toggle:checked + #header-toggle-label {
+    z-index: 300;
     color: #226591; }
+    @media screen and (max-width: 599px) {
+      #page #header-toggle:checked + #header-toggle-label {
+        position: fixed; } }
   #page #header-toggle {
     display: none; }
   #page > header {
@@ -70,6 +80,7 @@ img {
         padding-left: 60px; } }
   @media screen and (max-width: 749px) {
     #page #header-toggle:checked ~ header {
+      z-index: 200;
       background-color: rgba(235, 235, 235, 0.98);
       position: fixed;
       padding: 60px;
@@ -78,7 +89,7 @@ img {
     #page #header-toggle:checked ~ footer {
       position: fixed;
       bottom: 0;
-      z-index: 110;
+      z-index: 250;
       background-color: transparent; } }
   #page > main {
     flex-grow: 1;
@@ -87,7 +98,7 @@ img {
     position: fixed;
     top: 30px;
     right: 30px;
-    z-index: 99999999;
+    z-index: 150;
     font-size: 24px;
     color: #8b9db6;
     transition: 0.4s color;
@@ -99,12 +110,19 @@ img {
     @media screen and (max-width: 1199px) {
       #page #sidebar-toggle-label {
         display: block; } }
+    @media screen and (max-width: 599px) {
+      #page #sidebar-toggle-label {
+        position: absolute; } }
     @media screen and (min-width: 600px) and (max-width: 749px) {
       #page #sidebar-toggle-label {
         left: 20px;
         top: 85px; } }
   #page #sidebar-toggle:checked + #sidebar-toggle-label {
+    z-index: 300;
     color: #226591; }
+    @media screen and (max-width: 599px) {
+      #page #sidebar-toggle:checked + #sidebar-toggle-label {
+        position: fixed; } }
   #page #sidebar-toggle {
     display: none; }
   #page > aside {
